--- a/src/HUD/FullScreenScoreboard/index.scss
+++ b/src/HUD/FullScreenScoreboard/index.scss
@@ -4,7 +4,82 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 19, 2, 0.767);
+  background: rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: column;
+  z-index: 20;
+  align-items: center;
+  > svg {
+    position: relative;
+    top: 70px;
+  }
+  .rest-squads {
+    position: absolute;
+    top: 185px;
+    padding-top: 80px;
+    left: 1200px;
+    width: 400px;
+
+    .outside-top-3-squad {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      text-transform: uppercase;
+    }
+  }
+  .top-3-teams {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 210px;
+    left: 255px;
+    gap: 20px;
+  }
+  .top-3-team {
+    width: 800px;
+    height: 210px;
+    
+    background: linear-gradient(254.14deg, rgba(217, 217, 217, 0) 37.7%, rgba(217, 217, 217, 0.08) 74.42%), #000000;
+    border: 4px solid #000000;
+    box-shadow: 0px 8px 105px rgba(255, 255, 255, 0.05);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+  }
+  .order-container {
+    margin: 0 30px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    &.order-1 {
+      border-bottom: 10px solid #761BCA;
+    }
+    &.order-2 {
+      border-bottom: 10px solid #C22987;
+    }
+    &.order-3 {
+      border-bottom: 10px solid #F3A712;
+    }
+  }
+  .team-name {
+    font-size: 33px;
+    flex: 1;
+  }
+  .team-kills {
+    margin-right: 90px;
+    font-size: 60px;
+  }
+  .order {
+    width: 84px;
+    height: 84px;
+
+    background: rgba(255,255,255,0.2);
+    margin-right: 24px;
+    border-radius: 50%;
+    display: flex;
+    font-size: 33px;
+    align-items: center;
+    justify-content: center;
+  }
 }
