--- a/src/HUD/FullScreenScoreboard/index.scss
+++ b/src/HUD/FullScreenScoreboard/index.scss
@@ -18,13 +18,29 @@
     top: 185px;
     padding-top: 80px;
     left: 1200px;
-    width: 400px;
-
+    width: 480px;
+    justify-content: space-between;
+    display: flex;
+    .squads-column {
+      width: 200px;
+    }
+    .separator {
+      height: 712px;
+      width: 1px;
+      background-color: white;
+      opacity: 0.2;
+      position: relative;
+      top: -60px;
+    }
     .outside-top-3-squad {
       width: 100%;
       display: flex;
+      max-width: 240px;
       justify-content: space-between;
+      font-size: 25px;
       text-transform: uppercase;
+      height: 25px;
+      margin-bottom: 37px;
     }
   }
   .top-3-teams {
@@ -65,6 +81,16 @@
   .team-name {
     font-size: 33px;
     flex: 1;
+    display: flex;
+    align-items: center;
+    height: 48px;
+
+    img {
+      width: 48px;
+      height: 48px;
+      object-fit: contain;
+      margin-right: 40px;
+    }
   }
   .team-kills {
     margin-right: 90px;
