--- a/src/HUD/ObservedTeam/index.scss
+++ b/src/HUD/ObservedTeam/index.scss
@@ -49,7 +49,9 @@
     justify-content: center;
     overflow: hidden;
     img{
-      height: 95%;
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
     }
   }
   .color-bar {
@@ -84,6 +86,13 @@
       font-weight: 500;
       font-size: 21px;
       text-transform: uppercase;
+      margin-right: 50px;
+      img.logo {
+        width: 30px;
+        margin-right: 30px;
+        object-fit: contain;
+        height: 30px;
+      }
     }
     .kills {
       width: 120px;
