--- a/src/HUD/TeamDetails/index.scss
+++ b/src/HUD/TeamDetails/index.scss
@@ -12,6 +12,15 @@
     font-size: 90px;
     text-align: center;
     margin-bottom: 108px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img.logo {
+      width: 120px;
+      height: 100px;
+      object-fit: contain;
+      margin-right: 40px;
+    }
   }
   .players {
     display: flex;
