--- a/src/HUD/TopbarScoreboard/index.scss
+++ b/src/HUD/TopbarScoreboard/index.scss
@@ -1,3 +1,15 @@
+.tournament-title-bar {
+  font-weight: 500;
+  font-size: 26px;
+  width: 500px;
+  position: absolute;
+  z-index: 40;
+  left:calc(50% - 250px);
+  top: 45px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 .topbar-scoreboard {
   position: absolute;
   top: 0;
@@ -18,6 +30,26 @@
     padding: 0 17px;
     height: 100%;
     position: relative;
+    &.tournament-info {
+      font-size: 21px;
+      text-transform: uppercase;
+      font-weight: 300;
+      display: flex;
+      justify-content: center;
+      margin: 0 56px;
+      flex: unset;
+      min-width: 200px;
+      strong {
+        margin-right: 15px;
+        font-weight: 500;
+      }
+    }
+    .logo {
+      height: 30px;
+      width: 30px;
+      object-fit: contain;
+      margin-right: 30px;
+    }
     &.order-1 .border-bottom {
       background: #761BCA;
     }
@@ -39,7 +71,7 @@
       height: 48px;
 
       background: rgba(255,255,255,0.2);
-      margin-right: 24px;
+      margin-right: 30px;
       border-radius: 50%;
       display: flex;
       align-items: center;
