--- a/src/HUD/FullScreenScoreboard/index.scss
+++ b/src/HUD/FullScreenScoreboard/index.scss
@@ -64,7 +64,7 @@
     text-transform: uppercase;
   }
   .order-container {
-    margin: 0 30px;
+    margin: 0 40px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -101,7 +101,8 @@
     height: 84px;
 
     background: rgba(255,255,255,0.2);
-    margin-right: 24px;
+    margin-right: 12px;
+    margin-left: 12px;
     border-radius: 50%;
     display: flex;
     font-size: 33px;
