--- a/src/HUD/TopbarScoreboard/index.scss
+++ b/src/HUD/TopbarScoreboard/index.scss
@@ -1,6 +1,6 @@
 .tournament-title-bar {
   font-weight: 500;
-  font-size: 26px;
+  font-size: 24px;
   width: 500px;
   position: absolute;
   z-index: 40;
@@ -15,12 +15,12 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 72px;
+  height: 42px;
   background-color: rgba(0, 0, 0, 0.9);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  font-size: 21px;
+  font-size: 18px;
   align-items: center;
   text-transform: uppercase;
   .topbar-team {
@@ -30,6 +30,12 @@
     padding: 0 17px;
     height: 100%;
     position: relative;
+    .kills {
+      
+    margin-left: auto;
+    font-size: 21px;
+
+    }
     &.tournament-info {
       font-size: 21px;
       text-transform: uppercase;
@@ -67,9 +73,9 @@
       left:0px;
     }
     .order {
-      width: 48px;
-      height: 48px;
-
+      width: 32px;
+      height: 32px;
+      font-size: 18px;
       background: rgba(255,255,255,0.2);
       margin-right: 30px;
       border-radius: 50%;
