Added opacity transitions

--- a/src/HUD/FullScreenScoreboard/index.scss
+++ b/src/HUD/FullScreenScoreboard/index.scss
@@ -9,6 +9,11 @@
   flex-direction: column;
   z-index: 20;
   align-items: center;
+  transition: opacity 0.5s;
+  opacity: 0;
+  &.show {
+    opacity: 1;
+  }
   > svg {
     position: relative;
     top: 70px;
